# haskell-successors

./: ChangeLog.md  LICENSE  successors.cabal
src/Control/Applicative/: Successors.hs
